Fix T80457: Library Override - Custom Property to Drive Child Particles results in Crash.

RNA diffing code was not dealing properly valid NULL PointerRNA (like
the empty texture slots of a ParticleSettings e.g., which were cause of
crash in that report).

To be backported to 2.90 and 2.83.